--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:viewpager="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/activity_main"
@@ -19,7 +20,8 @@
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="50dp" />
+            android:layout_marginBottom="50dp"
+            viewpager:stay_time="4" />
     </RelativeLayout>
 
 </layout>
